--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,6 +6,7 @@ flask-cors==6.0.1
 Flask-JWT-Extended==4.7.1
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+gevent==25.5.1
 greenlet==3.2.3
 gunicorn==23.0.0
 importlib_metadata==8.7.0
@@ -21,3 +22,5 @@ tomli==2.2.1
 typing_extensions==4.14.0
 Werkzeug==3.1.3
 zipp==3.23.0
+zope.event==5.0
+zope.interface==7.2
