--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.8
 Flask==3.1.1
 flask-cors==6.0.1
 Flask-JWT-Extended==4.7.1
+Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 gevent==25.5.1
@@ -24,5 +25,3 @@ Werkzeug==3.1.3
 zipp==3.23.0
 zope.event==5.0
 zope.interface==7.2
-
-
