--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,27 +1,22 @@
-alembic==1.16.2
-blinker==1.9.0
+alembic==1.14.1
+blinker==1.8.2
 click==8.1.8
-Flask==3.1.1
-flask-cors==6.0.1
-Flask-JWT-Extended==4.7.1
+Flask==3.0.3
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.6.0
 Flask-Mail==0.10.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
-gevent==25.5.1
-greenlet==3.2.3
-gunicorn==23.0.0
-importlib_metadata==8.7.0
+greenlet==3.1.1
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
-MarkupSafe==3.0.2
-packaging==25.0
+MarkupSafe==2.1.5
 psycopg2-binary==2.9.10
-PyJWT==2.10.1
+PyJWT==2.9.0
 SQLAlchemy==2.0.41
-tomli==2.2.1
-typing_extensions==4.14.0
-Werkzeug==3.1.3
-zipp==3.23.0
-zope.event==5.0
-zope.interface==7.2
+typing_extensions==4.13.2
+Werkzeug==3.0.6
+zipp==3.20.2
